fixed alignment, story page, and format

--- a/public/css/containers.css
+++ b/public/css/containers.css
@@ -9,13 +9,13 @@
 
 .buttonContainer {
     float: right;
-    width: 15%;
+    width: 10%;
     margin-right: 10px;
 }
 
 .contentContainer {
     float: left;
-    width: 83%;
+    width: 85%;
     background-color: rgb(3,19,36);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -24,7 +24,7 @@
 .pictureContainer {
     position: relative;
     max-width: auto;
-    max-height: auto;
+    max-height: 100%;
     text-align: center;
 }
 .pictureContainer img {
@@ -36,9 +36,9 @@
 }
 
 .pictureDescriptionContainer {
-  width: 100%;
   height: 10%;
   padding-left: 3%;
+  width: 85%;
   background-color: white;
   opacity: 0.8;
   border-bottom-left-radius: 20px;
@@ -47,12 +47,15 @@
 }
 
 .storyContainer { 
-    margin-top: 10px;
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 5px;
+    width: 85%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     position: relative;
-    min-height: 400px;
+    padding-top:1%;
+    padding-left:3%;
+    padding-right:3%;
+    padding-bottom:3%;
+    min-height: 200px;
     background-color: #DDD;
     overflow-x: hidden;
     overflow-y: scroll;
